# cpp-python

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.py  clean-all.bat  reset-vault.bat
src/cpp/: main.cpp
src/python/: VaultHttpClient.py  multiply.py  vault-client.py
src/python/certs/: localhost_san.crt
src/scripts/: get_server_cert.bat
vault/: vault-init.bat  vault-init.py  vault-server-config.hcl  vault-start.bat
vault/certs/: localhost.key
